#
# Automakefile for the JavaScript interpreter tests.
# Copyright (c) 1998 New Generation Software (NGS) Oy
#
# Author: Markku Rossi <mtr@ngs.fi>
#

#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
#
# along with this program; see the file COPYING.  If not, write to
# the Free Software Foundation, 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.
#

TESTS = operands.test core.test object.test with.test array.test	\
boolean.test regexp.test string.test misc.test

tests_jss = operands.js core.js object.js with.js array.js boolean.js	\
regexp.js string.js misc.js

EXTRA_DIST = defs defs.js $(TESTS) $(tests_jss)
